<resources>
    <string name="app_name">RoomDemo</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="textview">TextView</string>
</resources>